--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
       <div class="top">
         <!-- <h3 class="info">time = <span id="time">0</span>s</h3> -->
         <div>
-          <h3 class="info">correct answer = <span id="crt-ans">0</span></h3>
+          <h3 class="info">c ans = <span id="crt-ans">0</span></h3>
+          <h3 class="info">avg t = <span id="avg-time">0</span></h3>
         </div>
         <div class="setting">
           <h3 class="info">settings</span></h3>
