--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <h3 class="info">t = <span id="avg-time">0</span></h3>
         </div>
         <div class="setting">
-          <h3 class="info">settings</span></h3>
+          <h3 class="info"></span></h3>
         </div>
       </div>
       <div class="mid">
