--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <div class="topnav" id="myTopnav">
       <a class="type">Type</a>
       <a class="operation">Operation</a>
+      <a class="digit1">x</a>
+      <a class="digit2">y</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
       </a>
